lib/tests/fixtures/compiler/parser/func_bad_variable_ref.baseline
Error: func_bad_variable_ref.pp:6:19: parameter $y cannot be referenced before it is evaluated (evaluation is left-to-right).
  function bad($x = $y, $y = 0)
                    ^~
